fix grid overflow-x showing & scrollbar

--- a/page/style.scss
+++ b/page/style.scss
@@ -45,7 +45,6 @@ $green: #48EA8B;
   padding: 0;
   font-family: 'Consolas', sans-serif;
   color: white;
-  transition: 0.075s;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
   &:before, &:after {
@@ -163,13 +162,13 @@ main {
       margin-top: -1rem;
       margin-left: -1rem;
       padding: 1rem;
-      overflow-y: scroll;
       overflow-x: show;
+      overflow-y: scroll;
       width: 100%;
       height: 475px;
       display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(50, 3.75rem);
+      grid-template-columns: repeat(8, 3.85rem);
+      grid-template-rows: repeat(50, 3.85rem);
       grid-gap: 1rem;
       &::-webkit-scrollbar-track {
         border-radius: 5px;
@@ -177,6 +176,9 @@ main {
       }
       &::-webkit-scrollbar
       {
+        position: absolute;
+        top: 2rem;
+        right: -3rem;
         width: 6px;
         background-color: rgba(0, 0, 0, 0.0);
       }
@@ -189,7 +191,7 @@ main {
         position: relative;
         overflow: hidden;
         .fa-slack-hash {
-          font-size: 32px;
+          font-size: 28px;
           font-weight: bold;
           opacity: 0;
           width: 100%;
@@ -215,7 +217,6 @@ main {
 
   #settings {
     #settingsWrapper {
-      // border: 2px red solid;
       margin-top: -1rem;
       margin-left: -1rem;
       padding: 1rem;
@@ -240,7 +241,7 @@ main {
         background-color: rgba(85, 85, 85, 0.5);
       }
 
-      #autoLaunchSetting, #ditherSetting, #fontSizeSetting {
+      #autoLaunchSetting, #ditherSetting, #fontSizeSetting, #fontEnabledSetting {
       border-bottom: 2px rgba(107, 107, 107, 0.15) solid;
       margin-bottom: 1.5rem;
       width: 105%;
@@ -306,7 +307,6 @@ main {
           }
 
           #right .switch {
-            // switch styling start
               cursor: pointer;
               transform: scale(1.2, 1.2);
               input {
@@ -371,9 +371,7 @@ main {
                   }
                 }
               }
-              // switch styling end
           }
-          // #right
         }
 
       }
